@@ -1,3 +1,8 @@
+2015-07-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* src/qt4/action_sequence_selector.cpp:
+	- 編集済みランクデータの自動保存機能を停止
+
 2015-07-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* src/model/action_sequence_description.h:
